Update image links : images are now located in assets folder instead of discord....

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 #router {
-    background-image: url("https://cdn.discordapp.com/attachments/773832860674686976/819543493772705842/bghome.png");
+    background-image: url("../assets/bghome.png");
     background-attachment: fixed;
     min-height: 100vh;
     background-repeat: no-repeat;
