--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -3,10 +3,10 @@
         <div class="row testA">
             <div class="col-lg-2 col-md-1 col-sm-1 testB">
                     <img class="logo"
-                         src="https://cdn.discordapp.com/attachments/773832860674686976/779291384980570112/logo_OW.png"
+                         src="assets/logo_OW_face.png"
                          alt="alt"/>
                     <img class="text"
-                         src="https://media.discordapp.net/attachments/773832860674686976/779298986909237258/OW-LOGO-L.png"
+                         src="assets/OW-LOGO-letters.png"
                          alt="alt"/>
             </div>
             <div class="col-lg-2 col-md-1 col-sm-1 test">
