--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md navbar-dark ">
     <a class="navbar-brand" routerLink="home">
         <img id="homeImage"
-             src="https://media.discordapp.net/attachments/773832860674686976/819561691070201906/ow-smol.png"
+             src="assets/ow-smol-text.png"
              alt="alt"/>
     </a>
     <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
