--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 #router {
-    background-image: url("../assets/bghome.png");
+    background-image: url("../assets/bghome.webp");
     background-attachment: fixed;
     min-height: 100vh;
     background-repeat: no-repeat;
