--- a/src/app/create-list/create-list.component.html
+++ b/src/app/create-list/create-list.component.html
@@ -7,12 +7,12 @@
         <div class="col-7">
             <div class="form-group row">
                 <label for="listName">Name</label>
-                <input type="text" id="listName" class="form-control">
+                <input required="true" placeholder="Enter name" type="text" id="listName" class="form-control">
             </div>
 
             <div class="form-group row">
                 <label for="listDescription">Description</label>
-                <textarea type="text" id="listDescription" class="form-control"></textarea>
+                <textarea required="true" placeholder="Enter description" type="text" id="listDescription" class="form-control"></textarea>
             </div>
 
             <div class="row">
@@ -21,22 +21,43 @@
                     <label class="custom-control-label" for="privateChoice">Private</label>
                 </div>
             </div>
-
-            <p></p>
-            <div class="row">
-                <div class="form-group">
-                    <h6> Add anime to the list</h6>
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Add an anime">
-                    <input class="form-control" type="text" placeholder="Add an anime">
-                    <input class="form-control" type="text" placeholder="Add an anime">
-                </div>
-            </div>
-
         </div>
     </div>
 
+    <p></p>
+
+
+
+</div>
+<div class="container w-75 text-light">
+    <div class="card">
+        <div class="col-7">
+            <label for="addAnime">Add anime to your list</label>
+            <input placeholder="Search an anime"
+                   id="addAnime"
+                   [(ngModel)]="selectedValue"
+                   [typeahead]="states"
+                   [typeaheadScrollable]="true"
+                   (typeaheadOnSelect)="onSelect($event)" class="form-control">
+            <table class="table text-light">
+                <tbody>
+                <tr *ngFor="let l of newList; let i=index">
+                    <th id="{{i+1}}" scope="row">{{l}}</th>
+                    <th id="{{l}}" class="text-right delete">
+                        <button (click)="onDelete($event)"  class="btn btn-xs btn-danger">X</button>
+                    </th>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+</div>
+<div class="container w-75 text-light">
+    <div class="card">
+        <div class="col-7">
+            <button id="sendNewList" class="btn btn-sm btn-success float-right">Create</button>
+            <button id="cancelNewList" class="btn btn-sm btn-danger float-right">Cancel</button>
+        </div>
+    </div>
 </div>
