--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -23,24 +23,23 @@
             <li class="nav-item" *ngIf="!isUserAuthenticated">
                 <a class="nav-link" routerLink="register" >SIGN UP</a>
             </li>
-            <!--<li class="nav-item">
-                <a class="nav-link" href="help">HELP</a>
-            </li>-->
             <li class="nav-item" *ngIf="isUserAuthenticated">
                 <a class="nav-link" href="account" >MY ACCOUNT</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0" (ngSubmit)="onSearchSubmit()">
             <div class="input-group mb-3" id="searchBlock">
-                <input (change)="onSearchChange($event)"  id="searchInput" type="text" class="form-control" placeholder="Search an anime" aria-label="Search an anime" aria-describedby="basic-addon2">
-                <div>
-                    <ul>
-                        <li *ngFor=""></li>
-                    </ul>
-                </div>
+
+                <ng-template #rt let-r="result" let-t="term">
+                    <img [src]="r.cover" class="mr-1" style="width: 16px">
+                    <ngb-highlight [result]="r.internationalTitle" [term]="t"></ngb-highlight>
+                </ng-template>
+
+                <input id="typeahead-template" type="text" class="form-control" [(ngModel)]="searchInputValue" [ngbTypeahead]="search" [resultTemplate]="rt"
+                       [inputFormatter]="formatter" (selectItem)="onSearchItemSelected($event)" name="searchInputValue"/>
                 <div class="input-group-append">
-                    <button class="btn btn-outline-primary btn-primary" type="button"><i style="color: #e4e4e4" class="fa fa-search"></i></button>
-                </div>
+                    <button class="btn btn-outline-primary btn-primary" type="submit"><i style="color: #e4e4e4" class="fa fa-search" ></i></button>
+                </div>r
             </div>
         </form>
     </div>
