Eliminate cumulative layout shifts

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,7 @@
         <ng-template ngbSlide>
             <img class="carousel-img"
                  src="../../assets/placeholder-image-sasuke.webp"
+                 width="1201" height="676"
                  alt="Random first slide">
             <div class="carousel-caption">
                 <h3>First slide label</h3>
