Updated meta description

--- a/src/app/anime-list/anime-list.component.html
+++ b/src/app/anime-list/anime-list.component.html
@@ -1,4 +1,10 @@
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="List of all animes on Onlyweebs.fr">
+    <meta name="keywords" content="Anime, Anime List, Weeb">
+    <meta name="author" content="jeunes-entrepreneurs">
+    <title>Anime List</title>
+</head>
 <div class="container">
     <div class="row">
 
