--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,7 +37,7 @@
         <div id="firstRow" class="row">
             <div class="col-lg-4">
                 <img class="rounded-circle"
-                     src="../../assets/placeholder-image-sasuke.webp?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke140_140.webp"
                      alt="Generic placeholder image" width="140" height="140">
                 <h2>Heading</h2>
                 <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
@@ -47,7 +47,7 @@
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle"
-                     src="../../assets/placeholder-image-sasuke.webp?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke140_140.webp"
                      alt="Generic placeholder image" width="140" height="140">
                 <h2>Heading</h2>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras
@@ -57,7 +57,7 @@
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle"
-                     src="../../assets/placeholder-image-sasuke.webp?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke140_140.webp"
                      alt="Generic placeholder image" width="140" height="140">
                 <h2>Heading</h2>
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
