Resize images 2nd iteration

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         <ng-template ngbSlide>
             <img class="carousel-img"
                  src="../../assets/placeholder-image-sasuke.webp"
-                 width="1201" height="676"
+                 width="1202" height="676"
                  alt="Random first slide">
             <div class="carousel-caption">
                 <h3>First slide label</h3>
@@ -16,6 +16,7 @@
         <ng-template ngbSlide>
             <img class="carousel-img"
                  src="../../assets/placeholder-image-sasuke.webp"
+                 width="1202" height="676"
                  alt="Random second slide">
             <div class="carousel-caption">
                 <h3>Second slide label</h3>
@@ -25,6 +26,7 @@
         <ng-template ngbSlide>
             <img class="carousel-img"
                  src="../../assets/placeholder-image-sasuke.webp"
+                 width="1202" height="676"
                  alt="Random third slide">
             <div class="carousel-caption">
                 <h3>Third slide label</h3>
@@ -79,7 +81,8 @@
             </div>
             <div class="col-md-5">
                 <img class="featurette-image img-fluid mx-auto"
-                     src="../../assets/placeholder-image-sasuke.webp?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke470_265.webp"
+                     width="470" height="265"
                      alt="Generic placeholder image">
             </div>
         </div>
@@ -96,7 +99,8 @@
             </div>
             <div class="col-md-5 order-md-1">
                 <img class="featurette-image img-fluid mx-auto"
-                     src="../../assets/placeholder-image-sasuke.webp?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke470_265.webp"
+                     width="470" height="265"
                      alt="Generic placeholder image">
             </div>
         </div>
@@ -112,7 +116,8 @@
             </div>
             <div class="col-md-5">
                 <img class="featurette-image img-fluid mx-auto"
-                     src="../../assets/placeholder-image-sasuke.webp?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke470_265.webp"
+                     width="470" height="265"
                      alt="Generic placeholder image">
             </div>
         </div>
