--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,16 +12,14 @@
 }
 
 #myCarousel h3 {
-    color: gray;
+    color: black;
 }
 
 #myCarousel p {
-    color: gray;
+    color: black;
 }
 
 .carousel-img {
-    max-width: 65vw;
-    min-width: 65vw;
     display: block;
     margin: auto;
 }
@@ -35,8 +33,8 @@
 #market {
     max-width: 65vw;
     min-width: 65vw;
-    color: white;
-    background-color: rgba(40, 43, 48, .75);
+    color: black;
+    background-color: rgba(245, 245, 220, .75);
 }
 
 #firstRow {
