--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,8 +5,8 @@
 }
 
 #myCarousel {
-    min-width: 65vw;
-    max-width: 65vw;
+    min-width: 60%;
+    max-width: 60%;
     margin: auto;
     outline: none;
 }
@@ -31,8 +31,8 @@
 }
 
 #market {
-    max-width: 65vw;
-    min-width: 65vw;
+    min-width: 60%;
+    max-width: 60%;
     color: black;
     background-color: rgba(245, 245, 220, .75);
 }
