--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
 <div id="page_container">
 
-    <ngb-carousel id="myCarousel">
+    <ngb-carousel id="myCarousel" aria-label="News Carousel">
         <ng-template ngbSlide>
             <img class="carousel-img"
                  src="../../assets/placeholder-image-sasuke.webp"
