--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -31,7 +31,7 @@
             <div class="input-group mb-3" id="searchBlock">
                 <input id="searchInput" type="text" class="form-control" placeholder="Search an anime" aria-label="Search an anime" aria-describedby="basic-addon2">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-primary btn-primary" type="button"><i style="color: #e4e4e4" class="fa fa-search"></i></button>
+                    <button class="btn btn-outline-primary btn-primary" type="button" aria-label="Search Button"><i style="color: #e4e4e4" class="fa fa-search"></i></button>
                 </div>
             </div>
         </form>
