--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -34,7 +34,7 @@
     min-width: 60%;
     max-width: 60%;
     color: black;
-    background-color: rgba(245, 245, 220, .75);
+    background-color: rgba(255,255,255,0.75);
 }
 
 #firstRow {
