Accessibility improvements iteration 2

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 <div id="page_container">
 
     <ngb-carousel id="myCarousel" aria-label="News Carousel">
-        <ng-template ngbSlide>
+        <ng-template ngbSlide aria-label="News Carousel page 1">
             <img class="carousel-img"
                  src="../../assets/placeholder-image-sasuke.webp"
                  width="1202" height="676"
@@ -13,7 +13,7 @@
                 <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
             </div>
         </ng-template>
-        <ng-template ngbSlide>
+        <ng-template ngbSlide aria-label="News Carousel page 2">
             <img class="carousel-img"
                  src="../../assets/placeholder-image-sasuke.webp"
                  width="1202" height="676"
@@ -23,7 +23,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
         </ng-template>
-        <ng-template ngbSlide>
+        <ng-template ngbSlide aria-label="News Carousel page 3">
             <img class="carousel-img"
                  src="../../assets/placeholder-image-sasuke.webp"
                  width="1202" height="676"
