--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -33,8 +33,8 @@
 #market {
     min-width: 60%;
     max-width: 60%;
-    color: black;
-    background-color: rgba(255,255,255,0.75);
+    color: white;
+    background-color: rgba(0,0,0,1);
 }
 
 #firstRow {
