--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,13 +7,14 @@
                     <h4 class="mb-0">Get connected with us on social networks!</h4>
                 </div>
                 <div id="social" class="col-md-6 col-lg-7 text-center text-md-right">
-                    <a class="fb-ic" href="https://www.facebook.com/OnlyWeebsOfficial/"aria-label="Facebook"><img
+                    <a class="fb-ic" href="https://www.facebook.com/OnlyWeebsOfficial/" aria-label="Facebook"><img
                         src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Facebook2_colored_svg-512.png"
                         alt=""></a>
                     <a class="tw-ic" href="https://twitter.com/onlyweebs1" aria-label="Twitter"><img
                         src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Twitter_colored_svg-512.png"
                         alt=""></a>
-                    <a class="gplus-ic" href="https://www.youtube.com/channel/UCgBK6ydrqSWl2QAdSlWCIHA" aria-label="Youtube"><img
+                    <a class="gplus-ic" href="https://www.youtube.com/channel/UCgBK6ydrqSWl2QAdSlWCIHA"
+                       aria-label="Youtube"><img
                         src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Youtube_colored_svg-512.png"
                         alt=""></a>
                     <a class="li-ic" href="https://www.linkedin.com/in/naelmezdari/" aria-label="Linkedin"><img
@@ -30,14 +31,14 @@
     <div class="container text-center text-md-left mt-5">
         <div class="row mt-3">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                <h6 class="text-uppercase font-weight-bold">Only Weebs</h6>
+                <h5 class="text-uppercase font-weight-bold">Only Weebs</h5>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>Welcome to OnlyWeebs, the world's most active online anime and manga community and database. <a
                     [routerLink]="['#!']">About us</a></p>
             </div>
 
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                <h6 class="text-uppercase font-weight-bold">Become proactive</h6>
+                <h5 class="text-uppercase font-weight-bold">Be proactive</h5>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p><a [routerLink]="['#!']">OnlyWeebs Live</a></p>
                 <p><a [routerLink]="['#!']">OnlyWeebs Forum</a></p>
@@ -46,7 +47,7 @@
             </div>
 
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                <h6 class="text-uppercase font-weight-bold">Useful links</h6>
+                <h5 class="text-uppercase font-weight-bold">Useful links</h5>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p><a [routerLink]="['/account']">Your Account</a></p>
                 <p><a [routerLink]="['#']">Become an Premium member!</a></p>
@@ -55,7 +56,7 @@
             </div>
 
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                <h6 class="text-uppercase font-weight-bold">Contact Us !</h6>
+                <h5 class="text-uppercase font-weight-bold">Contact Us !</h5>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p><i class="fa fa-home mr-3"></i>10 rue de la Nouvelle France</p>
                 <p><i class="fa fa-map-marker mr-3"></i>Montreuil 93100, France</p>
