--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,29 +1,31 @@
 <body id="body">
 
 <div id="page_container">
-
-    <ngb-carousel id="myCarousel">
-        <ng-template ngbSlide>
+    <ngb-carousel id="myCarousel" aria-label="News Carousel">
+        <ng-template ngbSlide aria-label="News Carousel page 1">
             <img class="carousel-img"
-                 src="https://cdn.discordapp.com/attachments/806876043175526411/806876352098992158/Best-Anime-Wallpaper-Images.png"
+                 src="../../assets/placeholder-image-sasuke.webp"
+                 width="1202" height="676"
                  alt="Random first slide">
             <div class="carousel-caption">
                 <h3>First slide label</h3>
                 <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
             </div>
         </ng-template>
-        <ng-template ngbSlide>
+        <ng-template ngbSlide aria-label="News Carousel page 2">
             <img class="carousel-img"
-                 src="https://cdn.discordapp.com/attachments/806876043175526411/806876352098992158/Best-Anime-Wallpaper-Images.png"
+                 src="../../assets/placeholder-image-sasuke.webp"
+                 width="1202" height="676"
                  alt="Random second slide">
             <div class="carousel-caption">
                 <h3>Second slide label</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
         </ng-template>
-        <ng-template ngbSlide>
+        <ng-template ngbSlide aria-label="News Carousel page 3">
             <img class="carousel-img"
-                 src="https://cdn.discordapp.com/attachments/806876043175526411/806876352098992158/Best-Anime-Wallpaper-Images.png"
+                 src="../../assets/placeholder-image-sasuke.webp"
+                 width="1202" height="676"
                  alt="Random third slide">
             <div class="carousel-caption">
                 <h3>Third slide label</h3>
@@ -36,7 +38,7 @@
         <div id="firstRow" class="row">
             <div class="col-lg-4">
                 <img class="rounded-circle"
-                     src="https://media.discordapp.net/attachments/806876043175526411/806876352098992158/Best-Anime-Wallpaper-Images.png?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke140_140.webp"
                      alt="Generic placeholder image" width="140" height="140">
                 <h2>Heading</h2>
                 <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
@@ -46,7 +48,7 @@
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle"
-                     src="https://media.discordapp.net/attachments/806876043175526411/806876352098992158/Best-Anime-Wallpaper-Images.png?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke140_140.webp"
                      alt="Generic placeholder image" width="140" height="140">
                 <h2>Heading</h2>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras
@@ -56,7 +58,7 @@
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle"
-                     src="https://media.discordapp.net/attachments/806876043175526411/806876352098992158/Best-Anime-Wallpaper-Images.png?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke140_140.webp"
                      alt="Generic placeholder image" width="140" height="140">
                 <h2>Heading</h2>
                 <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
@@ -78,7 +80,8 @@
             </div>
             <div class="col-md-5">
                 <img class="featurette-image img-fluid mx-auto"
-                     src="https://media.discordapp.net/attachments/806876043175526411/806876352098992158/Best-Anime-Wallpaper-Images.png?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke470_265.webp"
+                     width="470" height="265"
                      alt="Generic placeholder image">
             </div>
         </div>
@@ -95,7 +98,8 @@
             </div>
             <div class="col-md-5 order-md-1">
                 <img class="featurette-image img-fluid mx-auto"
-                     src="https://media.discordapp.net/attachments/806876043175526411/806876352098992158/Best-Anime-Wallpaper-Images.png?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke470_265.webp"
+                     width="470" height="265"
                      alt="Generic placeholder image">
             </div>
         </div>
@@ -111,7 +115,8 @@
             </div>
             <div class="col-md-5">
                 <img class="featurette-image img-fluid mx-auto"
-                     src="https://media.discordapp.net/attachments/806876043175526411/806876352098992158/Best-Anime-Wallpaper-Images.png?width=1202&height=676"
+                     src="../../assets/placeholder-image-sasuke470_265.webp"
+                     width="470" height="265"
                      alt="Generic placeholder image">
             </div>
         </div>
