--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,23 +4,22 @@
         <div class="container">
             <div class="row py-4 d-flex align-items-center">
                 <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-                    <h4 class="mb-0">Get connected with us on social networks!</h4>
+                    <h6 class="mb-0">Get connected with us on social networks!</h6>
                 </div>
                 <div id="social" class="col-md-6 col-lg-7 text-center text-md-right">
-                    <a class="fb-ic" href="https://www.facebook.com/OnlyWeebsOfficial/" aria-label="Facebook"><img
+                    <a class="fb-ic" href="https://www.facebook.com/OnlyWeebsOfficial/"><img
                         src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Facebook2_colored_svg-512.png"
                         alt=""></a>
-                    <a class="tw-ic" href="https://twitter.com/onlyweebs1" aria-label="Twitter"><img
+                    <a class="tw-ic" href="https://twitter.com/onlyweebs1"><img
                         src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Twitter_colored_svg-512.png"
                         alt=""></a>
-                    <a class="gplus-ic" href="https://www.youtube.com/channel/UCgBK6ydrqSWl2QAdSlWCIHA"
-                       aria-label="Youtube"><img
+                    <a class="gplus-ic" href="https://www.youtube.com/channel/UCgBK6ydrqSWl2QAdSlWCIHA"><img
                         src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Youtube_colored_svg-512.png"
                         alt=""></a>
-                    <a class="li-ic" href="https://www.linkedin.com/in/naelmezdari/" aria-label="Linkedin"><img
+                    <a class="li-ic" href="https://www.linkedin.com/in/naelmezdari/"><img
                         src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-512.png"
                         alt=""></a>
-                    <a class="ins-ic" href="https://www.instagram.com/onlyweebsofficial/" aria-label="Instagram"><img
+                    <a class="ins-ic" href="https://www.instagram.com/onlyweebsofficial/"><img
                         src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Instagram_colored_svg_1-512.png"
                         alt=""></a>
                 </div>
@@ -31,14 +30,14 @@
     <div class="container text-center text-md-left mt-5">
         <div class="row mt-3">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                <h5 class="text-uppercase font-weight-bold">Only Weebs</h5>
+                <h6 class="text-uppercase font-weight-bold">Only Weebs</h6>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>Welcome to OnlyWeebs, the world's most active online anime and manga community and database. <a
                     [routerLink]="['#!']">About us</a></p>
             </div>
 
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                <h5 class="text-uppercase font-weight-bold">Be proactive</h5>
+                <h6 class="text-uppercase font-weight-bold">Become proactive</h6>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p><a [routerLink]="['#!']">OnlyWeebs Live</a></p>
                 <p><a [routerLink]="['#!']">OnlyWeebs Forum</a></p>
@@ -47,7 +46,7 @@
             </div>
 
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                <h5 class="text-uppercase font-weight-bold">Useful links</h5>
+                <h6 class="text-uppercase font-weight-bold">Useful links</h6>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p><a [routerLink]="['/account']">Your Account</a></p>
                 <p><a [routerLink]="['#']">Become an Premium member!</a></p>
@@ -56,7 +55,7 @@
             </div>
 
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                <h5 class="text-uppercase font-weight-bold">Contact Us !</h5>
+                <h6 class="text-uppercase font-weight-bold">Contact Us !</h6>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p><i class="fa fa-home mr-3"></i>10 rue de la Nouvelle France</p>
                 <p><i class="fa fa-map-marker mr-3"></i>Montreuil 93100, France</p>
