# Conflicts: #	src/app/anime/anime.service.ts #	src/app/footer/footer.component.html #	src/app/home/home.component.html #	src/app/nav/nav.component.html #	src/index.html

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,22 +7,31 @@
                     <h4 class="mb-0">Get connected with us on social networks!</h4>
                 </div>
                 <div id="social" class="col-md-6 col-lg-7 text-center text-md-right">
-                    <a class="fb-ic" href="https://www.facebook.com/OnlyWeebsOfficial/" aria-label="Facebook"><img
-                        src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Facebook2_colored_svg-512.png"
-                        alt=""></a>
-                    <a class="tw-ic" href="https://twitter.com/onlyweebs1" aria-label="Twitter"><img
-                        src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Twitter_colored_svg-512.png"
-                        alt=""></a>
-                    <a class="gplus-ic" href="https://www.youtube.com/channel/UCgBK6ydrqSWl2QAdSlWCIHA"
-                       aria-label="Youtube"><img
-                        src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Youtube_colored_svg-512.png"
-                        alt=""></a>
-                    <a class="li-ic" href="https://www.linkedin.com/in/naelmezdari/" aria-label="Linkedin"><img
-                        src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-512.png"
-                        alt=""></a>
-                    <a class="ins-ic" href="https://www.instagram.com/onlyweebsofficial/" aria-label="Instagram"><img
-                        src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Instagram_colored_svg_1-512.png"
-                        alt=""></a>
+                    <a class="fb-ic" href="https://www.facebook.com/OnlyWeebsOfficial/" aria-label="Facebook">
+                        <span style="font-size: 3em; color: royalblue;">
+                            <i class="fa fa-facebook"></i>
+                        </span>
+                    </a>
+                    <a class="tw-ic" href="https://twitter.com/onlyweebs1" aria-label="Twitter">
+                        <span style="font-size: 3em; color: deepskyblue;">
+                            <i class="fa fa-twitter"></i>
+                        </span>
+                    </a>
+                    <a class="gplus-ic" href="https://www.youtube.com/channel/UCgBK6ydrqSWl2QAdSlWCIHA" aria-label="Youtube">
+                        <span style="font-size: 3em; color: red;">
+                            <i class="fa fa-youtube"></i>
+                        </span>
+                    </a>
+                    <a class="li-ic" href="https://www.linkedin.com/in/naelmezdari/" aria-label="Linkedin">
+                        <span style="font-size: 3em; color: royalblue;">
+                            <i class="fa fa-linkedin"></i>
+                        </span>
+                    </a>
+                    <a class="ins-ic" href="https://www.instagram.com/onlyweebsofficial/" aria-label="Instagram">
+                        <span style="font-size: 3em; color: purple;">
+                            <i class="fa fa-instagram"></i>
+                        </span>
+                    </a>
                 </div>
             </div>
         </div>
