Changing icons in footer from images to actual icons

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -34,7 +34,7 @@
     min-width: 60%;
     max-width: 60%;
     color: white;
-    background-color: rgba(0,0,0,1);
+    background-color: rgba(40, 43, 48, .75);
 }
 
 #firstRow {
