fixed account bio update and register radio

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -8,7 +8,7 @@
                             <div class="user-avatar">
                                 <img src="https://cdn.pixabay.com/photo/2015/12/22/20/42/face-1104763_960_720.jpg" alt="Maxwell Admin">
                             </div>
-                            <h5 class="user-name">{{ currentUser.firstname}}</h5>
+                            <h5 class="user-name">{{ currentUser.username}}</h5>
                             <h6 class="user-email">{{ currentUser.email }}</h6>
                         </div>
                         <div class="about">
