--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -23,7 +23,7 @@
                     <label for="inlineRadio2">Female</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" id="inlineRadio3" value="O" >
+                    <input class="form-check-input" type="radio" id="inlineRadio3" value="O" formControlName="gender">
                     <label for="inlineRadio3">Other</label>
                 </div>
                 <br>
