--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -35,10 +35,10 @@
                     <ngb-highlight [result]="r.internationalTitle" [term]="t"></ngb-highlight>
                 </ng-template>
 
-                <input id="typeahead-template" type="text" class="form-control" [(ngModel)]="searchInputValue" [ngbTypeahead]="search" [resultTemplate]="rt"
+                <input aria-label="search an anime" id="typeahead-template" type="text" class="form-control" [(ngModel)]="searchInputValue" [ngbTypeahead]="search" [resultTemplate]="rt"
                        [inputFormatter]="formatter" (selectItem)="onSearchItemSelected($event)" name="searchInputValue"/>
                 <div class="input-group-append">
-                    <button class="btn btn-outline-primary btn-primary" type="submit"><i style="color: #e4e4e4" class="fa fa-search" ></i></button>
+                    <button class="btn btn-outline-primary btn-primary" type="submit" aria-label="search button"><i style="color: #e4e4e4" class="fa fa-search" ></i></button>
                 </div>r
             </div>
         </form>
