--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,11 +1,12 @@
-
 <nav class="navbar navbar-expand-md navbar-dark ">
     <a class="navbar-brand" routerLink="home">
         <img id="homeImage"
              src="assets/ow-smol-text.webp"
              alt="alt"/>
     </a>
-    <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed"
+            data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false"
+            aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
@@ -35,11 +36,21 @@
                     <ngb-highlight [result]="r.internationalTitle" [term]="t"></ngb-highlight>
                 </ng-template>
 
-                <input id="typeahead-template" type="text" class="form-control" [(ngModel)]="searchInputValue" [ngbTypeahead]="search" [resultTemplate]="rt"
-                       [inputFormatter]="formatter" (selectItem)="onSearchItemSelected($event)" name="searchInputValue" role="textbox" aria-label="search for an anime"/>
+                <label id="textboxLabel" for="typeahead-template"></label><input id="typeahead-template" type="text"
+                                                                                 class="form-control"
+                                                                                 [(ngModel)]="searchInputValue"
+                                                                                 [ngbTypeahead]="search"
+                                                                                 [resultTemplate]="rt"
+                                                                                 [inputFormatter]="formatter"
+                                                                                 (selectItem)="onSearchItemSelected($event)"
+                                                                                 name="searchInputValue" role="textbox"
+                                                                                 contenteditable="true"
+                                                                                 aria-placeholder="an anime name"
+                                                                                 aria-labelledby="textboxLabel"/>
                 <div class="input-group-append">
-                    <button class="btn btn-outline-primary btn-primary" type="submit" aria-label="search button"><i style="color: #e4e4e4" class="fa fa-search" ></i></button>
-                </div>r
+                    <button class="btn btn-outline-primary btn-primary" type="submit" aria-label="search button"><i
+                        style="color: #e4e4e4" class="fa fa-search"></i></button>
+                </div>
             </div>
         </form>
     </div>
